changed logic to send available dates to frontend
